got some overflow stuff fixed

--- a/rocket/static/users/less/users.less
+++ b/rocket/static/users/less/users.less
@@ -340,7 +340,9 @@
 				padding-left: 15px;	
 				margin: 0;
 				font-size: 15px;
+				width: 70%;
 			}
+
 			
 			h5{
 				color: #DDD;
